Add remaining screenshot.Styling

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -6,10 +6,8 @@
 
 {% block menu %}
     <header>
-        <nav class="hide-on-large-only z-depth-1">
-            <div class="container">
-                <a href="#" data-activates="slide-out" class="button-collapse green-text pinned left"><i class="material-icons">menu</i></a>
-            </div>
+        <nav class="hide-on-large-only z-depth-5 pinned">
+                <a href="#" data-activates="slide-out" class="button-collapse white-text left"><i class="material-icons">menu</i></a>
         </nav>
 
         <ul id="slide-out" class="side-nav fixed section table-of-contents">
@@ -56,8 +54,11 @@
 
         </div>
         <div class="row">
-            <div class="col offset-s1 s10">
-                <p>Ancien de la relation client et du télémarketing, je suis actuellement en reconversion au métier de Développeur Web.<br><br>
+            <div class="col offset-s3 s6 offset-m1 m3">
+                <img src="{{ asset('img/portrait_alexandrefradet.jpg') }}" alt="portrait" class="responsive-img circle">
+            </div>
+            <div class="col offset-s1 s10 m7">
+                <p style="text-align: justify">Ancien de la relation client et du télémarketing, je suis actuellement en reconversion au métier de Développeur Web.<br><br>
                     En formation sur les technos PHP / Symfony2, je suis actuellement en recherche de stage / autres pour février 2017 !<br><br>
                     Plutôt attiré par la partie back-end des applications, j'aspire à rejoindre une entreprise qui me permettra de travailler
                     sur des projets complexes et me soutiendra dans ma montée en compétences. Actuellement formé en Symfony 2, je préférerais dans
@@ -67,6 +68,7 @@
                 </p>
             </div>
         </div>
+        <div class="bl_sp_sm"></div>
 
         <!-- Competences -->
 
@@ -150,10 +152,9 @@
 
                     </div>
                 </div>
-
-
             </div>
         </div>
+        <div class="bl_sp_sm"></div>
 
         <!-- Projets -->
 
@@ -166,7 +167,7 @@
             <div class="col offset-s1 s10 m4">
                 <div class="card z-depth-3">
                     <div class="card-image">
-                        <img src="{{ asset('img/Hackaton36-1.png') }}" alt="tag-ton-metier">
+                        <img src="{{ asset('img/mondial-1.png') }}" alt="tag-ton-metier">
                         <span class="card-title">Tag ton métier</span>
                     </div>
                     <div class="card-content valign-wrapper">
@@ -214,6 +215,8 @@
                 </div>
             </div>
         </div>
+        <div class="bl_sp_sm"></div>
+
 
         <!-- Hackatons -->
 
@@ -225,7 +228,7 @@
             <div class="col offset-s1 s10 m4">
                 <div class="card z-depth-3">
                     <div class="card-image">
-                        <img src="{{ asset('img/Hackaton36-1.png') }}" alt="hackaton-insead">
+                        <img src="{{ asset('img/Hackaton48-1.png') }}" alt="hackaton-insead">
                         <span class="card-title">JustAsk</span>
                     </div>
                     <div class="card-content valign-wrapper">
@@ -259,7 +262,7 @@
             <div class="col offset-s1 s10 m4">
                 <div class="card z-depth-3">
                     <div class="card-image">
-                        <img src="{{ asset('img/Hackaton36-1.png') }}" alt="hackaton-24h">
+                        <img src="{{ asset('img/Hackaton24-1.png') }}" alt="hackaton-24h">
                         <span class="card-title">La fête à la chaussette</span>
                     </div>
                     <div class="card-content valign-wrapper">
