--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,17 +60,11 @@
 
 
 {% block footer %}
-    <footer class="page-footer green darken-3 z-depth-5">
+    <footer class="page-footer z-depth-5">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="green-text">{{ site_name }}</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.<br></p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <ul>
-                        <li><a href="#" data-activates="slide-out" class="button-collapse2 white-text">Profil</a></li>
-                    </ul>
+                <div class="col s12">
+                    <p class="grey-text text-lighten-4">Copyright © Alexandre Fradet 2016<br></p>
                 </div>
             </div>
         </div>
