--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -21,7 +21,7 @@
             <li><a href="#projects">Projets</a></li>
             <li><a href="#hackatons">Hackatons</a></li>
             <li class="navbar-sp"></li>
-            <li><a href="{{ asset('download/Notice_test.pdf')}}" download="">Mon CV</a></li>
+            <li><a href="{{ asset('download/Notice_test.pdf')}}" download="" class="disable">Mon CV</a></li>
             <li class="navbar-sp"></li>
             <li>Contact :</li>
             <li class="contact">
