Change some balise

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- SEO -->
     <meta name="description" content="Site personnel d’Alexandre Fradet, Développeur Web PHP Symfony 2 sur Lyon. Web Developer. CV, blog, tutos et plus encore à venir.">
