--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -76,6 +76,16 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified Materialize JavaScript -->
     <script type="text/javascript" src="{{ asset('js/main.js') }}" ></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-89858023-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
 {% endblock %}
 
