--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -186,7 +186,7 @@
             <h3>Les sessions de codage intensif</h3>
         </div>
         <div class="row hackatons-tile">
-            {% for hacks in Hackatons %}
+            {% for hacks in Hackaton %}
             <div class="col offset-s1 s10 m4">
                 <div class="card z-depth-3">
                     <div class="card-image">
@@ -205,6 +205,5 @@
             {% endfor %}
         </div>
         <div class="bl_sp_sm"></div>
-
     </div>
 {% endblock %}
