Update ajax script, twig view and controller for optionnal image display and upating content with button.

--- a/app/Resources/views/Blog/index.html.twig
+++ b/app/Resources/views/Blog/index.html.twig
@@ -20,7 +20,7 @@
             {% for article in articles %}
                 <h3><small>{{ article.title }}</small></h3>
                 {%  if article.img %}
-                    <img src="{{ article.img }}"/>
+                    <img src="{{ asset('img/'~ article.img )}}"/>
                 {% endif %}
                 <p>{{ article.content | raw }}</p>
             {% endfor %}
