--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,1 +1,1 @@
-main{padding-left:0}.row{height:95vh}.col{height:35%}img{max-height:100%;max-width:100%;width:auto}
+main{padding-left:0;text-align:center}.row{height:95vh}.col{height:35%}img{max-height:100%;max-width:100%;width:auto}
