--- a/web/css/blogindex.css
+++ b/web/css/blogindex.css
@@ -1,1 +1,1 @@
-main{text-align:justify}.section_articles>img{margin-left:auto;margin-right:auto;text-align:center}
+.blogindex_art_cont{text-align:justify}#tagbar{text-align:center}
