--- a/web-src/css/blogindex.css
+++ b/web-src/css/blogindex.css
@@ -1,9 +1,10 @@
 main {
+}
+
+.blogindex_art_cont {
     text-align:justify;
 }
 
-.section_articles > img {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+#tagbar {
+    text-align:center;
 }
