--- a/app/Resources/views/Blog/index.html.twig
+++ b/app/Resources/views/Blog/index.html.twig
@@ -15,21 +15,23 @@
             {% endfor %}
         </div>
     </div>
-
+    <div class="section_articles">
     {% for article in articles %}
-    <div class="row">
-    <div class="col s12">
-        <h3>{{ article.title }}</h3>
-        </div>
-        {%  if article.img %}
-            <div class="col offset-s2 s8 offset-m3 m6 offset-l4 l4 blogindex_articles_img">
-                <img src="{{ asset('img/'~ article.img )}}"/>
+        <div class="row">
+            <div class="col s12">
+                <h3>{{ article.title }}</h3>
             </div>
-        {% endif %}
-        <div class="col s12 offset-m2 m8 offset-l3 l6 blogindex_art_cont">
-        <p>{{ article.content | raw }}</p>
-    </div>
+            {%  if article.img %}
+                <div class="col offset-s2 s8 offset-m3 m6 offset-l4 l4 blogindex_articles_img">
+                    <img src="{{ asset('img/'~ article.img )}}"/>
+                </div>
+            {% endif %}
+            <div class="col s12 offset-m2 m8 offset-l3 l6 blogindex_art_cont">
+                <p>{{ article.content | raw }}</p>
+            </div>
+        </div>
     {% endfor %}
+    </div>
 {% endblock %}
 {% block javascripts %}
 
