--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -160,12 +160,12 @@
         <div class="row projects-tile">
             {% for proj in Project %}
                 <div class="col offset-s1 s10 m4">
-                    <div class="card z-depth-3">
+                    <div class="card z-depth-3 ">
                         <div class="card-image">
                             <img src="{{ asset( 'img/'~ proj.img ) }}" alt="hackaton-{{ proj.title }}">
                             <span class="card-title">{{ proj.title }}</span>
                         </div>
-                        <div class="card-content valign-wrapper">
+                        <div class="card-content valign-wrapper project-card">
                             <p class="valign">
                                 {{ proj.content | raw }}
                         </div>
@@ -190,7 +190,7 @@
             {# for hacks in Hackaton.1 #}
             {% for hacks in Hackaton %}
             <div class="col offset-s1 s10 m4">
-                <div class="card z-depth-3">
+                <div class="card z-depth-3 hackaton-card">
                     <div class="card-image">
                         <img src="{{ asset( 'img/'~ hacks.img ) }}" alt="hackaton-{{ hacks.title }}">
                         <span class="card-title">{{ hacks.title }}</span>
@@ -209,4 +209,13 @@
         <div class="bl_sp_sm"></div>
 
     </div>
+{% endblock %}
+
+{% block javascripts %}
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!-- Compiled and minified Materialize JavaScript -->
+    <script type="text/javascript" src="{{ asset('js/main.js') }}" ></script>
+    <script type="text/javascript" src="{{ asset('js/resume.js') }}" ></script>
+
 {% endblock %}
