Update some content in resume

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -78,8 +78,7 @@
                     <div class="card-content black-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
                         <ul>
-                            <li>En formation <strong>Développeur PHP</strong></li>
-                            <li>Spécialisé <strong>Symfony 2</strong></li>
+                            <li>Formé sur <strong>Symfony 2</strong></li>
                             <li>Développement en <strong>POO</strong> et <strong>MVC</strong></li>
                         </ul>
                     </div>
@@ -107,23 +106,28 @@
                 <div class="card green accent-2 z-depth-4">
                     <div class="card-content black-text text-darken-4">
                             <span class="card-title"><small>
-                            Je travaille avec <strong>PhpStorm</strong>
+                            Je travaille avec <strong>PhpStorm</strong> & <strong>Eclipse</strong>
                             </small></span>
                     </div>
                 </div>
             </div>
             <div class="col offset-s1 s10 m6">
+
+
                 <div class="card lime lighten-2 z-depth-2">
                     <div class="card-content black-text text-darken-4">
                             <span class="card-title">
-                                    <strong>HTML 5</strong>
+                                    <strong>Java</strong>
                             </span>
+                        <ul>
+                            <li>Stage de fin de formation réalisé sur <strong>Liferay</strong></li>
+                        </ul>
                     </div>
                 </div>
 
                 <div class="card green lighten-2 z-depth-4">
                     <div class="card-content black-text text-darken-4">
-                        <span class="card-title"><strong>CSS 3</strong></span>
+                        <span class="card-title"><strong>HTML 5</strong> / <strong>CSS 3</strong></span>
                         <ul>
                             <li>Je travaille sur <strong>Bootstrap</strong></li>
                             <li>Site réalisé en <strong>Materializecss</strong></li>
@@ -137,11 +141,10 @@
                         <span class="card-title">Autres <strong>outils</strong>
                         </span>
                         <ul>
-                            <li>Base de données <strong>MySQL</strong>.</li>
-                            <li>Dépendances <strong>Composer</strong> / <strong>Gulp</strong></li>
-                            <li>Serveur <strong>Apache2</strong></li>
+                            <li>Base de données <strong>MySQL</strong></li>
+                            <li>Serveur <strong>Apache2</strong> / <strong>Tomcat</strong></li>
                             <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
-                            <li>Linux <strong>Ubuntu</strong></li>
+                            <li>OS <strong>Ubuntu</strong> / <strong>Windows</strong></li>
                         </ul>
 
                     </div>
