Add skill and skillDetail entities. start working on block views. Update dependencies

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -67,87 +67,8 @@
 
         <!-- Competences -->
 
-        <div class="row resume-title section scrollspy" id="skills">
-            <h2>Compètences techniques</h2>
-            <h3>Stack technique perso</h3>
-        </div>
+        {% include 'Main/ResumeBlock/skill.html.twig' %}
 
-        <div class="row skills-tile">
-            <div class="col offset-s1 s10 m6">
-                <div class="card light-green z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                        <span class="card-title"><strong>PHP</strong></span>
-                        <ul>
-                            <li>En formation <strong>Développeur PHP</strong></li>
-                            <li>Spécialisé <strong>Symfony 2</strong></li>
-                            <li>Développement en <strong>POO</strong> et <strong>MVC</strong></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="card lime darken-1 z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                        <span class="card-title"><strong>JavaScript</strong></span>
-                        <ul>
-                            <li>Site réalisé avec <strong>jQuery</strong> avec lequel je travaille</li>
-                            <li>J'envisage <strong>NodeJS</strong> comme prochaine techno</li>
-                            <li>Je suis interessé par <strong>MEAN</strong></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="card green accent-4 z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                            <span class="card-title">
-                                    Méthode <strong>SCRUM</strong>
-                            </span>
-                    </div>
-                </div>
-
-                <div class="card green accent-2 z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                            <span class="card-title"><small>
-                            Je travaille avec <strong>PhpStorm</strong>
-                            </small></span>
-                    </div>
-                </div>
-            </div>
-            <div class="col offset-s1 s10 m6">
-                <div class="card lime lighten-2 z-depth-2">
-                    <div class="card-content black-text text-darken-4">
-                            <span class="card-title">
-                                    <strong>HTML 5</strong>
-                            </span>
-                    </div>
-                </div>
-
-                <div class="card green lighten-2 z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                        <span class="card-title"><strong>CSS 3</strong></span>
-                        <ul>
-                            <li>Je travaille sur <strong>Bootstrap</strong></li>
-                            <li>Site réalisé en <strong>Materializecss</strong></li>
-                            <li>J'envisage <strong>Foundation</strong> pour mon prochain projet</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="card green accent-5 z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                        <span class="card-title">Autres <strong>outils</strong>
-                        </span>
-                        <ul>
-                            <li>Base de données <strong>MySQL</strong>.</li>
-                            <li>Dépendances <strong>Composer</strong> / <strong>Gulp</strong></li>
-                            <li>Serveur <strong>Apache2</strong></li>
-                            <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
-                            <li>Linux <strong>Ubuntu</strong></li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="bl_sp_sm"></div>
 
         <!-- Projets -->
