--- a/web-src/css/resume.css
+++ b/web-src/css/resume.css
@@ -41,3 +41,10 @@ nav {
 .chip {
     display: inline;
 }
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
