--- a/app/Resources/views/Main/ResumeBlock/skill.html.twig
+++ b/app/Resources/views/Main/ResumeBlock/skill.html.twig
@@ -4,38 +4,24 @@
 </div>
 
 <div class="row skills-tile">
-    <div class="col offset-s1 s10 m6">
-
-        {% for skill in Skills %}
-            {%  if loop.index % 2 == 0 %}
-                <div class="card light-green z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                            <span class="card-title"><strong>{{ skill.label }}</strong></span>
-                            <ul>
-                                {% for skillDetail in skill.skillDetails %}
-                                    <li>{{ skillDetail.label | raw}}</li>
-                                {% endfor %}
-                            </ul>
+    {% for i in 0..1 %}
+        <div class="col offset-s1 s10 m6">
+            {% for skill in Skills %}
+                {%  if loop.index0 % 2 == i %}
+                    <div class="card {{ random(['light-green','green'])}} {{ random(['darken','lighten']) }}-{{ random([1,2,3,4]) }} z-depth-4">
+                        <div class="card-content black-text text-darken-4">
+                                <span class="card-title"><strong>{{ skill.label | raw }}</strong></span>
+                            {% if skill.skillDetails | length >= 1 %}
+                                <ul>
+                                    {% for skillDetail in skill.skillDetails %}
+                                        <li>{{ skillDetail.label | raw}}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </div>
                     </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
-    <div class="col offset-s1 s10 m6">
-
-        {% for skill in Skills %}
-            {%  if loop.index % 2 == 1 %}
-            <div class="card light-green z-depth-4">
-                    <div class="card-content black-text text-darken-4">
-                        <span class="card-title"><strong>{{ skill.label }}</strong></span>
-                        <ul>
-                            {% for skillDetail in skill.skillDetails %}
-                                <li>{{ skillDetail.label | raw}}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endfor %}
 </div>
