Solve issue with some img path that were considered absolute instead of relatives

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -25,13 +25,13 @@
             <li class="navbar-sp"></li>
             <li>Contact :</li>
             <li class="contact">
-                <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('/img/github-black.png') }}" alt="github" /></a>
-                <a href="mailto:{{ mail}}"><img src="{{ asset('/img/mail-black.png')}}" alt="mail"/></a>
+                <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('img/github-black.png') }}" alt="github" /></a>
+                <a href="mailto:{{ mail}}"><img src="{{ asset('img/mail-black.png')}}" alt="mail"/></a>
 
             </li>
             <li class="contact">
-                <a href="https://fr.linkedin.com/in/{{ linkedin }}" target="_blank"><img src="{{ asset('/img/linkedin-black.png')}}" alt="linkedin"></a>
-                <a href="https://twitter.com/{{ twitter }}" target="_blank"><img src="{{ asset('/img/twitter-black.png')}}" alt="twitter"/></a>
+                <a href="https://fr.linkedin.com/in/{{ linkedin }}" target="_blank"><img src="{{ asset('img/linkedin-black.png')}}" alt="linkedin"></a>
+                <a href="https://twitter.com/{{ twitter }}" target="_blank"><img src="{{ asset('img/twitter-black.png')}}" alt="twitter"/></a>
             </li>
 
         </ul>
