Remove CV from src files to avoid issue with git merging, add CV name in parameter

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -21,7 +21,7 @@
             <li><a href="#projects">Projets</a></li>
             <li><a href="#hackatons">Hackatons</a></li>
             <li class="navbar-sp"></li>
-            <li><a href="{{ asset('download/CV_Alexandre_Fradet.pdf')}}" download="">Mon CV</a></li>
+            <li><a href="{{ asset('download/'~resume_pdf_name)}}" download="">Mon CV</a></li>
             <li class="navbar-sp"></li>
             <li>Contact :</li>
             <li class="contact">
